--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: '3'
-
 services:
   backend:
     build: ./backend
     image: simple-orders-backend
     environment:
+      - NODE_ENV=development
       - MONGODB_URL=mongodb://mongodb:27017/node-boilerplate
       - PORT=3000
       - JWT_SECRET=thisisasamplesecret
