--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.13.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "@vee-validate/rules": "^4.13.2",
+    "vee-validate": "^4.13.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
