--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,13 +29,14 @@ services:
       - '5173:5173'
     volumes:
       - ./frontend:/usr/src/frontend
-      - /usr/src/frontend/node_modules
+      - frontend_node_modules:/usr/src/frontend/node_modules
     networks:
       - app-network
     environment:
       - VITE_API_URL=http://localhost:3000
     depends_on:
       - backend
+    command: sh -c "npm install && npm run dev -- --host"
 
   mongodb:
     image: mongo:4.2.1-bionic
@@ -48,6 +49,7 @@ services:
 
 volumes:
   dbdata:
+  frontend_node_modules:
 
 networks:
   app-network:
