--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,30 @@ services:
       - app-network
     command: npm run dev
 
+  seed:
+    build: ./backend
+    image: simple-orders-backend
+    user: root
+    environment:
+      - NODE_ENV=development
+      - MONGODB_URL=mongodb://mongodb:27017/node-boilerplate
+      - PORT=3000
+      - JWT_SECRET=thisisasamplesecret
+      - JWT_ACCESS_EXPIRATION_MINUTES=30
+      - JWT_REFRESH_EXPIRATION_DAYS=30
+      - JWT_RESET_PASSWORD_EXPIRATION_MINUTES=10
+      - JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
+    depends_on:
+      - mongodb
+    volumes:
+      - ./backend:/usr/src/node-app
+      - /usr/src/node-app/node_modules
+      - seed_state:/seed
+    networks:
+      - app-network
+    command: sh -c "if [ -f /seed/seeded ]; then echo 'Seed already applied'; exit 0; fi; npm run seed && touch /seed/seeded"
+    restart: on-failure
+
   frontend:
     build: ./frontend
     image: simple-orders-frontend
@@ -50,6 +74,7 @@ services:
 volumes:
   dbdata:
   frontend_node_modules:
+  seed_state:
 
 networks:
   app-network:
